Solve the overflow-x problem

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -10,8 +10,7 @@ body, html
 
 body
   font-family: 'Open Sans', sans-serif
-  overflow-x: hidden
-  
+
 section
   padding: 40px 0
 
