--- a/source/stylesheets/components/_session.sass
+++ b/source/stylesheets/components/_session.sass
@@ -29,6 +29,7 @@
     img
       width: 100%
   .quote
+    overflow: hidden
     // display: flex
     // justify-content: space-between
     // width: 100%
